[package]
name = "tari_utilities"
description = "A set of useful and commonly used utilities that are used in several places in the Tari project."
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.4.10"
edition = "2018"

[dependencies]
base58-monero = { version = "0.3.2", default-features = false,optional = true}
base64 = { version = "0.13.0", default-features = false, optional = true , features = ["alloc"] }
bincode =  { version = "1.3.3", default-features = false, optional = true }
newtype-ops = { version =  "0.1.4", default-features = false , optional = true}
borsh = { version = "0.9.3", optional = true }
generic-array = "0.14.6"
serde = { version = "1.0.150", optional = true, default-features = false , features = ["derive"] }
serde_json = { version = "1.0", default-features = false, optional = true, features = ["std"]}
snafu = {version="0.7.4", default-features =false}
zeroize = {version="1.3.0", default-features =false, features = ["zeroize_derive"], optional = true}
subtle = {version= "2.4.1", default-features =false, optional = true}

[dev-dependencies]
rand = "0.8.0"

[features]
default = ["serialize", "epoch", "monero", "alloc", "zero", "subtle"]
epoch = []
zero = ["zeroize"]
alloc = ["zeroize/alloc"]
serialize = ["serde", "serde_json", "bincode", "base64", "newtype-ops"]
borsh = ["dep:borsh"]
monero = ["base58-monero"]