[package]
name = "tari_utilities"
description = "A set of useful and commonly used utilities that are used in several places in the Tari project."
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.4.10"
edition = "2018"

[dependencies]
base58-monero = { version = "0.3.2", default-features = false }
base64 = "0.13.0"
bincode = "1.3.3"
borsh = { version = "0.10.3", optional = true }
generic-array = "0.14.6"
newtype-ops = "0.1.4"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
subtle = "2.4.1"
thiserror = "1.0.0"
zeroize = { version = "1.3.0", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.7.0"

[features]
borsh = ["dep:borsh"]
